--- a/index.html
+++ b/index.html
@@ -8,49 +8,74 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark py-2 bg-dark" id="navbar">
-        <div class="container-fluid">
-          <a class="navbar-brand lead mx-3 text-uppercase fw-bold" id="logo" href="#">Covid-Tracker</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse text-white" id="navbarNav">
-            <ul class="navbar-nav ms-auto mx-3 lead ">
-              <li class="nav-item">
-                <a class="nav-link" href="TunisiaDiv">Tunisia</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">World</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Continents</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Search</a>
-              </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top" id="navbar">
+      <div class="container">
+          <a href="#" id="logo" class="navbar-brand lead fw-bold">Covid-Tracker</a>
+          <button 
+          class="navbar-toggler"
+          type="button" 
+          data-bs-toggle="collapse" 
+          data-bs-target="#navmenu"> 
+          <span class="navbar-toggler-icon"></span>
+      </button>
+          <div class="collapse navbar-collapse" id="navmenu">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link lead" href="#tableContainer">World</a>
+                </li>
+                <li class="nav-item lead">
+                  <a class="nav-link" href="#">Continents</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link lead" data-bs-toggle="modal" data-bs-target="#searchModal" href="#">Search</a>
+                </li>
+              </ul>
           </div>
-        </div>
+      </div>
     </nav>
-   <section class="bg-dark p-5 ">
+   <section id="tunisiaSection" class="bg-dark p-5 " style="min-width: 932px;">
        <div class="container d-flex align-items-center justify-content-center" id="cardContainer">
-        <div class="stats text-center" style="width: 25rem;">
-            <div class="stats-body">
+        <div class="stats text-center" style="min-width: 25rem;">
+            <div class="stats-body" id="statsContainer">
                 <div class="flexContainer">
                     <div class="flex-item-1">
                         <h5 class="stats-title">Tunisia </h5>
-                        <img src="tn.png" class='img-fluid rounded mx-auto d-block' alt="">
+                        <img src="https://www.countryflags.io/TN/shiny/64.png" class='img-fluid rounded mx-auto d-block' alt="">
                     </div>
                     <div class="flex-item-2 mx-5" id="tunisiaStats">
                         
                     </div>
                 </div>
-              <button class="btn btn-light" id="detailsButton">More Details</button>
+                <div id="divButton">
+                  <button class="btn btn-light" id="detailsButton">More Details</button>
+                </div>
             </div>
           </div>
        </div>
    </section>
-    <!--<div id="tableContainer"></div>-->
+   <section class="bg-dark">
+      <div id="tableContainer">
+      </div>
+   </section>
+   <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <div class="container-fluid">
+            <form class="d-flex" id="searchForm">
+              <input id="searchInput" class="form-control me-2" type="search" placeholder="the country you're looking for">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+        <div class="modal-body text-center" id="modal-container">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
     <script src='script.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
