--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
+<body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top" id="navbar">
       <div class="container">
           <a href="#" id="logo" class="navbar-brand lead fw-bold">Covid-Tracker</a>
@@ -53,7 +53,10 @@
           </div>
        </div>
    </section>
-   <section class="bg-dark">
+   <section class="bg-dark" id="tableSection">
+     <div class="switchContainer">
+       <input type="checkbox" class="my-3" id="checkboxButton">
+     </div>
       <div id="tableContainer">
       </div>
    </section>
@@ -69,6 +72,9 @@
           </div>
         </div>
         <div class="modal-body text-center" id="modal-container">
+        </div>
+        <div id="pContainer" class="text-center">
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
