--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <title>Document</title>
 </head>
 <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top" id="navbar">
       <div class="container">
-          <a href="#" id="logo" class="navbar-brand lead fw-bold">Covid-Tracker</a>
+          <a href="index.html" id="logo" class="navbar-brand lead fw-bold">Cov<i class="bi bi-geo-alt-fill" style="font-size: 15px;"></i>d-Tracker </a>
           <button 
           class="navbar-toggler"
           type="button" 
@@ -19,30 +21,30 @@
           <span class="navbar-toggler-icon"></span>
       </button>
           <div class="collapse navbar-collapse" id="navmenu">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
+              <ul class="navbar-nav ms-auto ">
+                <li class="nav-item mx-2">
                   <a class="nav-link lead" href="#tableContainer">World</a>
                 </li>
-                <li class="nav-item lead">
-                  <a class="nav-link" href="#">Continents</a>
+                <li class="nav-item  mx-2">
+                  <a class="nav-link lead" href="#continents">Continents</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-2">
                   <a class="nav-link lead" data-bs-toggle="modal" data-bs-target="#searchModal" href="#">Search</a>
                 </li>
               </ul>
           </div>
       </div>
     </nav>
-   <section id="tunisiaSection" class="bg-dark p-5 " style="min-width: 932px;">
+   <section id="worldSection" class="bg-dark p-5 " style="min-width: 932px;">
        <div class="container d-flex align-items-center justify-content-center" id="cardContainer">
         <div class="stats text-center" style="min-width: 25rem;">
             <div class="stats-body" id="statsContainer">
                 <div class="flexContainer">
                     <div class="flex-item-1">
-                        <h5 class="stats-title">Tunisia </h5>
-                        <img src="https://www.countryflags.io/TN/shiny/64.png" class='img-fluid rounded mx-auto d-block' alt="">
+                        <h5 class="stats-title">WORLD </h5>
+                        <i class="bi bi-globe2"></i>
                     </div>
-                    <div class="flex-item-2 mx-5" id="tunisiaStats">
+                    <div class="flex-item-2 mx-5" id="worldStats">
                         
                     </div>
                 </div>
@@ -54,12 +56,33 @@
        </div>
    </section>
    <section class="bg-dark" id="tableSection">
-     <div class="switchContainer">
-       <input type="checkbox" class="my-3" id="checkboxButton">
-     </div>
       <div id="tableContainer">
       </div>
    </section>
+
+   <section id="graphSection" >
+     <h3 style="color:rgba(87, 231, 87, 0.774); text-align: center;">Continents Stats</h3>
+     <div class="container d-flex align-items-center justify-content-center my-3">
+      <div id="continents" style="width: 900px; height: 500px; border-radius: 10px;"></div>
+     </div>
+   </section>
+   
+   <footer>
+    <div class="source" style="text-align: center;">
+      <h4 ><i class="bi bi-folder-symlink"></i>Sources</h4>
+      <div class="links d-flex align-items-center justify-content-center">
+        <div class="flex-1 mx-3">
+          <h5>APIS :</h5><i class="bi bi-link"></i><a href="https://disease.sh/">disease.sh</a>
+        </div>
+        <div class="flex-2 mx-3">
+          <h5>Countries Flags : </h5><i class="bi bi-flag"></i><a href="www.countryflags.io">www.countryflags.io</a>
+        </div>
+        <div class="flex-3 mx-3">
+          <h5>The Graph : </h5><i class="bi bi-bar-chart-steps"></i><a href="https://developers.google.com/chart">developers.google.com/chart</a>
+        </div>
+      </div>
+    </div>
+   </footer>
    <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -82,6 +105,7 @@
       </div>
     </div>
   </div>
+
     <script src='script.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
