--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
           <div class="collapse navbar-collapse" id="navmenu">
               <ul class="navbar-nav ms-auto ">
                 <li class="nav-item mx-2">
-                  <a class="nav-link lead" href="#tableContainer">World</a>
+                  <a class="nav-link lead" href="#worldSection">World</a>
                 </li>
                 <li class="nav-item  mx-2">
                   <a class="nav-link lead" href="#continents">Continents</a>
                 </li>
                 <li class="nav-item mx-2">
                   <a class="nav-link lead" data-bs-toggle="modal" data-bs-target="#searchModal" href="#">Search</a>
+                </li>
+                <li class="nav-item  mx-2">
+                  <a class="nav-link lead" href="#sources">Sources</a>
                 </li>
               </ul>
           </div>
@@ -67,18 +70,17 @@
      </div>
    </section>
    
-   <footer>
-    <div class="source" style="text-align: center;">
-      <h4 ><i class="bi bi-folder-symlink"></i>Sources</h4>
+   <footer id="sources">
+    <div class="source p-3" style="text-align: center;">
       <div class="links d-flex align-items-center justify-content-center">
         <div class="flex-1 mx-3">
-          <h5>APIS :</h5><i class="bi bi-link"></i><a href="https://disease.sh/">disease.sh</a>
+          <h5>APIS :</h5><a class='links' href="https://disease.sh/"><i class="bi bi-link"></i>disease.sh</a>
         </div>
         <div class="flex-2 mx-3">
-          <h5>Countries Flags : </h5><i class="bi bi-flag"></i><a href="www.countryflags.io">www.countryflags.io</a>
+          <h5>Countries Flags : </h5><a class='links'  href="https://www.countryflags.io"><i class="bi bi-flag"></i>www.countryflags.io</a>
         </div>
         <div class="flex-3 mx-3">
-          <h5>The Graph : </h5><i class="bi bi-bar-chart-steps"></i><a href="https://developers.google.com/chart">developers.google.com/chart</a>
+          <h5>The Graph : </h5><a class='links'  href="https://developers.google.com/chart"><i class="bi bi-bar-chart-steps"></i>developers.google.com/chart</a>
         </div>
       </div>
     </div>
