--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
       </div>
    </section>
 
-   <section id="graphSection" >
+   <section id="graphSection" style="min-width: 932px;">
      <h3 style="color:rgba(87, 231, 87, 0.774); text-align: center;">Continents Stats</h3>
      <div class="container d-flex align-items-center justify-content-center my-3">
       <div id="continents" style="width: 900px; height: 500px; border-radius: 10px;"></div>
      </div>
    </section>
    
-   <footer id="sources">
+   <footer id="sources" style=" min-width: 932px;">
     <div class="source p-3" style="text-align: center;">
       <div class="links d-flex align-items-center justify-content-center">
         <div class="flex-1 mx-3">
